src/tests/snapshots/mosaic__tests__integration__split_terminals_horizontally-2.snap
---
source: src/tests/integration.rs
expression: snapshot
---
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
Welcome to fish, the friendly interactive shell                                                                          
⋊> ~/c/mosaic on main ⨯                                                                                          10:47:03
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
