src/tests/snapshots/mosaic__tests__integration__split_terminals_vertically-3.snap
---
source: src/tests/integration.rs
expression: snapshot
---
                                                                                                                         
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
                                                            │                                                            
Welcome to fish, the friendly interactive shell             │                                                            
                                                            │                                                            
                                                            │Welcome to fish, the friendly interactive shell             
⋊> ~/c/mosaic on main ⨯                                     │⋊> ~/c/mosaic on main ⨯                             19:40:00
                                                            │                                                            
